--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,31 @@
 canvas{
 	background-color: #000;
 	display: block;
-	position: absolute;
-	margin: auto;
+	width: 100%;
+	height: 100%;
+
+	padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+
+    position:fixed;
+    top: 0;
+    left: 0;
+
+	/*position: absolute;*/
+	/*margin: auto;*/
+	/*width: 100%;
+	height: 100%;*/
+	/*
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
+	*/
 }
+
+/*#gameContainer{
+   width: 100%;
+   text-align:center;
+}*/
